# Backend_RecipeBox_1

./: README.md  pyproject.toml
recipeBox/: db.sqlite3
recipeBox/recipeBox/: forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
recipeBox/recipeBox/html/: add_author.html  add_recipe.html  author.html  edit_recipe.html  generic_form.html  recipe_content.html  recipe_list.html
recipeBox/recipeBox/migrations/: 0001_initial.py
