[tool.poetry]
name = "RecipeBox"
version = "0.1.0"
description = ""
authors = ["Tamoya Hopkins <tamoya@250ok.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.0.2"
ipdb = "0.12.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
